--- a/bb_exporter/appsettings.json
+++ b/bb_exporter/appsettings.json
@@ -1,6 +1,6 @@
 {
     "BBoxAPIURL": "https://mabbox.bytel.fr",
-    "BBoxPassword": "PASS",
+    "BBoxPassword": "MYPASS",
     "BBoxAPIRefreshTime": 60,
     "MetricsServerListeningPort": 9100
 }
